--- a/Labs/Titanic_EDA_lab/Titanic EDA Lab.ipynb
+++ b/Labs/Titanic_EDA_lab/Titanic EDA Lab.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Titanic Exploratory Data Analysis Lab</h1></center>\n",
+    "# Titanic Exploratory Data Analysis Lab\n",
     "**University of Illinois**\n",
     "<br>CSC 570 - Data Science Essentials\n",
     "<br>Author: Arthur Putnam\n",
@@ -191,7 +191,8 @@
     "    <td style=\"width:100%; border: 1px solid black; text-align:center\">N.A.</td>\n",
     "    <td style=\"width:100%; border: 1px solid black; text-align:center\">N.A.</td>\n",
     "\n",
-    "  </tr>\n"
+    "  </tr>\n",
+    "</table>"
    ]
   },
   {
