--- a/Labs/Logistic_regression_with_Titanic/Logistic_Regression_with_the_Titanic.ipynb
+++ b/Labs/Logistic_regression_with_Titanic/Logistic_Regression_with_the_Titanic.ipynb
@@ -58,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#reading the data from the disk into memory\n",
@@ -68,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 541,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# From our EDA we know there are 687 missing cabin values...\n",
@@ -91,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dataframe with important features\n",
@@ -109,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 543,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X['sex'] = pd.get_dummies(X.sex)['female']\n",
@@ -121,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 544,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#remember to scale our features, as with linear regression\n",
@@ -134,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#build test and training sets\n",
@@ -144,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
@@ -239,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 550,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
@@ -276,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_curve\n",
