--- a/Semester_Project/Semester Project.ipynb
+++ b/Semester_Project/Semester Project.ipynb
@@ -23,8 +23,8 @@
     "Find correlations between prices of related items on a video game called runescape and be able to make predictions on prices using prices of other items. \n",
     "\n",
     "The item I will be using for demonstration is a prayer potion. These potions are quite valuable in the game and are frequently used. Their price tends to change with the game's economy. Finding correlations between items and being able to predict the future price on those items could result is big savings or making profits on when the right 'time' is to sell.\n",
-    "![potion](potion.png)\n",
-    "![potion](chart.png)\n",
+    "![potion](/potion.png)\n",
+    "![potion](/chart.png)\n",
     "\n",
     "### Project Goals\n",
     "* Find correlations between items\n",
